# sap-networkflow-challenge

./: Dockerfile  load_logs.py  pyproject.toml  requirements.txt  run_dashboard.py  run_local.py  setup.py  verify_resources.py
.github/workflows/: ci.yml
infra/: backend.tf  main.tf  variables.tf
infra/modules/aci/: main.tf
infra/modules/acr/: main.tf
infra/modules/storage/: main.tf
networkflow/: analyzer.py  cli.py  dashboard_app.py  parsers.py
networkflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sample_logs/: sample_nsg_log.csv
tests/: test_analyzer.py  test_dashboard.py  test_parsers.py
