[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "networkflow"
version = "0.1.0"
description = "NSG flow log analytics dashboard"
readme = "README.md"
authors = [
    { name="Tejasri", email="tejassri.thalloju117@gmail.com" }
]
dependencies = [
    "pandas",
    "dash",
    "plotly",
    "azure-storage-blob",
    "tenacity",
    "click"
]

